--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,40 +1,22 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="dark">
-    <ion-title align="center">Business</ion-title>
-  </ion-toolbar>
-</ion-header>
 <ion-content>
-  <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-  <ion-card  >
+    <ion-img [src]="'data:image/png;base64,' + imagenBase64"></ion-img>
+  <ion-card>
     <ion-card-content  >
       <form [formGroup]="formularioLogin" id="#form"  >
         <ion-item >
-
             <ion-label position="floating">User</ion-label>
-
           <ion-input formControlName="user"></ion-input>
         </ion-item>
         <br>
         <ion-item class="ion-margin-bottom">
-
             <ion-label position="floating">Password</ion-label>
             <ion-input position="floating"formControlName="password" type="password"></ion-input>
-
         </ion-item>
       </form>
       <br>
-      <ion-button color="success"  expand="block" fill="clear" (click)="login()" >
-
+      <ion-button color="primary"  expand="block" fill="clear" (click)="login()" >
           Access
-
       </ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
-<ion-footer>
-  <ion-toolbar >
-    <ion-toolbar color="dark">
-      <ion-title align="center">create 2023 😺</ion-title>
-    </ion-toolbar>
-  </ion-toolbar>
-</ion-footer>
