--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,26 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>Inicio</ion-title>
+  <ion-toolbar align="right" color="primary">
+    <ion-title>User</ion-title>
+    <ion-button color="light" fill="clear" (click)="logout()">
+      <ion-icon name="exit"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
-
-
+<ion-progress-bar type="indeterminate"></ion-progress-bar>
+<ion-content class="ion-padding">
+  <ion-card>
+    <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png"/>
+    <ion-card-header>
+      <h1>Cristian Cáceres</h1>
+    </ion-card-header>
+    <ion-card-content>
+      <p>Systems administrator</p>
+    </ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Pay hour: $ 15.00</ion-card-title>
+    </ion-card-header>
+    <ion-datetime></ion-datetime>
+  </ion-card>
+</ion-content>
