--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-    <ion-img [src]="'data:image/png;base64,' + imagenBase64"></ion-img>
+    <ion-img [src]="'data:image/png;base64,' + imagenBase64"  class="imagen-personalizada"></ion-img>
   <ion-card>
     <ion-card-content  >
       <form [formGroup]="formularioLogin" id="#form"  >
@@ -15,8 +15,9 @@
       </form>
       <br>
       <ion-button color="primary"  expand="block" fill="clear" (click)="login()" >
-          Access
+          Login
       </ion-button>
     </ion-card-content>
   </ion-card>
+  <ion-progress-bar type="indeterminate"></ion-progress-bar>
 </ion-content>
