--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,4 +1,3 @@
-
 ion-content{
   #form{
     margin-top: 50px;
@@ -8,4 +7,8 @@ ion-content{
   }
 }
 
+.imagen-personalizada {
+  width: 400px;
+  height: 300px;
+}
 
